Fix Nova source contract test compatibility